# deposit_calculator_V2

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
alembic/: README  alembic.ini  env.py
alembic/versions/: 0c84a5663577_create_deposits_table.py
src/: config.py  main.py  models.py
tests/: test_main.py
